@@ -34,7 +34,6 @@ rpm \- RPM Package Manager
 
 \fBrpm\fR {\fB--rebuild|--recompile\fR} \fB\fISOURCEPKG\fB\fR\fI ...\fR
 
-\fBrpm\fR \fB--tarbuild\fR \fB\fITARBALL\fB\fR\fI ...\fR
 .SS "MISCELLANEOUS:"
 .PP
 
